Bug 80476 - Start Center sidebar button labels are too large and vary in size on different operating systems
Summary: Start Center sidebar button labels are too large and vary in size on differen...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta1
Hardware: All All
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.1
Keywords:
Depends on:
Blocks: Start-Center mab4.3
  Show dependency treegraph
 
Reported: 2014-06-24 10:58 UTC by Tin Man
Modified: 2014-09-03 06:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice Start Center on Mac OS X (162.89 KB, image/png)
2014-06-24 10:58 UTC, Tin Man
Details
Start Center on Ubuntu Gnome (180.21 KB, image/png)
2014-06-24 16:16 UTC, Tin Man
Details
LibreOffice Start Center on XP (15.29 KB, image/png)
2014-06-26 14:21 UTC, kloud
Details
Start center 4.3.1 font size too big (80.52 KB, image/png)
2014-09-03 03:52 UTC, nomnex
Details
About window 4.3.1 font too big (132.68 KB, image/png)
2014-09-03 03:53 UTC, nomnex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tin Man 2014-06-24 10:58:27 UTC
Created attachment 101665 [details]
LibreOffice Start Center on Mac OS X

The labels of buttons in the Start Center sidebar are disproportionately large compared to other LibreOffice labels. (See attached screenshot.)

The screenshot is from a MacBook Air with 1440 * 900 screen resolution.
Comment 1 kloud 2014-06-24 15:40:31 UTC
Compared to which ones? Not a bug, btw.
Comment 2 Tin Man 2014-06-24 16:16:35 UTC
Created attachment 101676 [details]
Start Center on Ubuntu Gnome

The Start Center on Ubuntu Gnome, for comparison.
Comment 3 Tin Man 2014-06-24 16:23:07 UTC
(In reply to comment #1)
> Compared to which ones? Not a bug, btw.

Compared to every other UI element -- e.g. the two rectangular buttons at the bottom. (If you launch other applications or open other LibreOffice, the difference is even clearer, but you can still guess at the correct size by looking at e.g. the menu bar or the title bar.)

I also uploaded a screen of the Start Center in Ubuntu Gnome (1920 x 1080 screen resolution), where the button labels are much closer to the other labels (e.g. the rectangular buttons at the bottom).

Also, how is this not a bug? I doubt it was the intention to make the button labels look terribly disproportionate on Mac OS X, but nice on Linux.
Comment 4 Adolfo Jayme Barrientos 2014-06-24 22:26:48 UTC
I can confirm this issue. I would actually prefer that those labels in every platform be reduced just a tad.
Comment 5 kloud 2014-06-26 14:21:02 UTC
Created attachment 101808 [details]
LibreOffice Start Center on XP

Blanked the recent documents.
Comment 6 kloud 2014-06-26 14:25:55 UTC
(In reply to comment #3)

The bottom buttons represent web-links rather than programs. It's not like they'd exceed the screen width either. The devs decided to go with this. So I doubt, it wasn't the intention to enlarge so-called 'labels'. I've switched it to 'enhancement' and made a major edit.


The XP-version is currently the smallest in 4.3 RC1.
Comment 7 V Stuart Foote 2014-07-04 12:35:30 UTC
(In reply to comment #1)
>... Not a bug, btw.

Actually, while the devs may object, from a design and UX perspective it is an oversight in implementation.  Function may be correct, but the form is equally important--if not more so given the functional goals for the Start center.

https://wiki.documentfoundation.org/Design/Whiteboards/Start_Center

In implementing layout using GTK+ UI widgets we gain some very nice design and development resources, but we are finding occasional cross-platform warts like this.

Such issues are bugs and need to be corrected. As to priority, if it is visible/noticeable, while not at the level of a functional regression, it is high.

Setting back accordingly.
Comment 8 Adolfo Jayme Barrientos 2014-07-07 19:52:38 UTC
(In reply to comment #7)
> from a design and UX perspective it is an oversight in implementation.

Hm, I doubt that the difference in sizing is our implementators’ fault.

The UI fonts used in Windows (MS Sans Serif, Tahoma, Segoe UI); Mac (Lucida Grande, Helvetica Neue); and Linux (DejaVu, Ubuntu, Cantarell, ...) have all wildly different metrics, so it’s obvious that they will look different.

(In reply to comment #3)
> Compared to every other UI element -- e.g. the two rectangular buttons at
> the bottom. (If you launch other applications or open other LibreOffice, the
> difference is even clearer, but you can still guess at the correct size by
> looking at e.g. the menu bar or the title bar.)

Well, the design for the start center contemplated bigger labels from the start. Nobody made mockups with Lucida Grande, as it’s obvious.

> Also, how is this not a bug? I doubt it was the intention to make the button
> labels look terribly disproportionate on Mac OS X, but nice on Linux.

See my reply to comment #7.

Anyway, as I mentioned already, we could reduce the size a bit everywhere and achieve a nice compromise.
Comment 9 Tin Man 2014-07-07 20:56:34 UTC
(In reply to comment #8)
> (In reply to comment #7)
> > from a design and UX perspective it is an oversight in implementation.
> 
> Hm, I doubt that the difference in sizing is our implementators’ fault.
> 
> The UI fonts used in Windows (MS Sans Serif, Tahoma, Segoe UI); Mac (Lucida
> Grande, Helvetica Neue); and Linux (DejaVu, Ubuntu, Cantarell, ...) have all
> wildly different metrics, so it’s obvious that they will look different.

They might have different metrics, but that's not all that's in play here.
Compare the Linux and the Mac OS X screenshot. On Linux (using the Cantarell font), the font sizes used in the sidebar are quite similar -- the labels in the rectangular buttons at the bottom are just slightly smaller than the labels above. On Mac OS X, though, the labels at the top are huge, bigger than the Linux ones, while the labels at the bottom are miniscule, smaller than the Linux ones.

That either means that two different fonts are being used in the Mac OS X sidebar -- which I doubt, but if it was the case, it would present a consistency problem as well -- or that there's a problem with label scaling.
Comment 10 Adolfo Jayme Barrientos 2014-07-07 21:48:46 UTC
> They might have different metrics, but that's not all that's in play here

That *is* in play. Of course, I didn’t mean to say that’s the only affecting factor – also, different OS approaches to font scaling ← I wouldn’t say it’s a LibreOffice issue (it’s the OS the one doing the rendering), but LibreOffice exacerbates it by using non-standard font sizes.

> On Linux (using the Cantarell font), the font sizes used in the sidebar are
> quite similar

But that is only an effect of your setting of Cantarell Bold as your UI face. Try again using Cantarell like in a normal setup (i.e. the Regular weight) and you will notice a bigger difference. (BTW, you’re using a pretty old version of Cantarell).
Comment 11 Adolfo Jayme Barrientos 2014-07-07 21:54:30 UTC
> That either means that two different fonts are being used in the Mac OS X
> sidebar

Lucida Grande only has two weights, and Bold is obviously not used. Also, the Start Center code has not hardcoded any font.

> or that there's a problem with label scaling.

That’s what I’m saying.
Comment 12 Michael Meeks 2014-07-14 12:24:37 UTC
Is this truly a most-annoying bug for 4.3 ? =) compared to the others, it doesn't seem so severe.
Comment 13 Tin Man 2014-07-14 16:09:46 UTC
(In reply to comment #12)
> Is this truly a most-annoying bug for 4.3 ? =) compared to the others, it
> doesn't seem so severe.

It's an eyesore whenever I see this on a MacBook, and given that this is something Mac OS X users always see when launching LibreOffice, I would say it's pretty important (albeit perhaps only for Mac users).
Comment 14 V Stuart Foote 2014-07-14 16:28:21 UTC
MAB, yes. But certainly no blocker.

But it is of MAB importance from the perspective that it is our most visible element (i.e. the first seen & seen every launch) implemented with GTK+ UI.  

And there is also an implementation issue of using GTK+ UI widgets for GUI layout if we are unable to control things to obtain consistent results. Even if it is because of differences in the widgets across the platforms--maybe Not Our Bug, but we still have to deal with it.  Can we even specify font family and weight in UI and have it apply in all OS?
Comment 15 Michael Meeks 2014-07-15 20:41:25 UTC
Ah - well ;-) I suspect that the problem lies here:

sfx2/source/dialog/backingwindow.cxx

const int nButtonsFontSize = 15;

which is a hard-coded point (whatever that means) size for the font there.

I suspect if instead we had something like:

        Font aFont = pParent->GetSettings().GetStyleSettings().GetLabelFont();
        aFont.SetSize(Size(0, aFont.GetSize().Height() * 1.2));
        aFont.SetWeight(WEIGHT_BOLD);

Or somesuch (as we do for the message dialogs font); perhaps this would do it - testing appreciated:

--- a/sfx2/source/dialog/backingwindow.cxx
+++ b/sfx2/source/dialog/backingwindow.cxx
@@ -59,7 +59,7 @@ const char TEMPLATE_URL[] =       "slot:5500";
 const char OPEN_URL[] =           ".uno:Open";
 const char SERVICENAME_CFGREADACCESS[] = "com.sun.star.configuration.ConfigurationAccess";
 
-const int nButtonsFontSize = 15;
+const float nButtonsFontEnlarge = 1.5;
 const Color aButtonsBackground(114, 168, 84); // TDF green
 const Color aButtonsText(COL_WHITE);
 
@@ -242,7 +242,7 @@ void BackingWindow::initControls()
     // setup nice colors
     mpCreateLabel->SetControlForeground(aButtonsText);
     Font aFont(mpCreateLabel->GetControlFont());
-    aFont.SetHeight(nButtonsFontSize);
+    aFont.SetHeight(aFont.GetSize().Height() * nButtonsFontEnlarge);
     mpCreateLabel->SetControlFont(aFont);
 
     mpHelpButton->SetControlForeground(aButtonsText);
@@ -274,7 +274,7 @@ void BackingWindow::setupButton( PushButton* pButton )
 {
     // the buttons should have a bit bigger font
     Font aFont(pButton->GetControlFont());
-    aFont.SetHeight(nButtonsFontSize);
+    aFont.SetHeight(aFont.GetSize().Height() * nButtonsFontEnlarge);
     pButton->SetControlFont(aFont);
 
     // color that fits the theme


Then again - that doesn't appear to have any effect on the font size whatever so ... ;-) hmm.
Comment 16 Caolán McNamara 2014-07-24 15:55:23 UTC
because there is initially no ControlFont, getting one gives a 0x0 font, i.e. "use default size", so multiplying it has no effect. Hence I guess the hard-coded 15pt. 15pt is 1.25 the size of the typical 12pt, but we use 1.2 in the message dialogs, so lets go with that multiplier. The trick being to retrieve from the settings a Font which has the "true" number of the default filled in
Comment 17 Commit Notification 2014-07-24 15:59:56 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9a5e81fa80d1e90bd73ae4e19c89b28537aed334

Resolves: fdo#80476 Start Center sidebar button are too large



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Caolán McNamara 2014-07-24 16:01:41 UTC
https://gerrit.libreoffice.org/#/c/10512/ for 4-3
Comment 19 Michael Meeks 2014-07-24 18:26:52 UTC
Thanks Caolan ! =)
Comment 20 Commit Notification 2014-07-24 18:29:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=674f6cee2b42e26c1c6750c805d0d11ad08b655b&h=libreoffice-4-3

Resolves: fdo#80476 Start Center sidebar button are too large


It will be available in LibreOffice 4.3.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 21 V Stuart Foote 2014-08-02 13:41:40 UTC
@Caolán, Michael,

So as reported bug 82043 looks like the 1.2 multiplier results in GTK+ UI font that are bit too small.

And sorry for the QA noise as I roll this from Resolved Fixed --> Unconfirmed --> New
Comment 22 Caolán McNamara 2014-08-07 17:13:36 UTC
Lets leave this closed, as the original problem of varying sizes across systems is fixed, and use bug 82043 for the follow up tweaking as to what the exact size should be.
Comment 23 nomnex 2014-09-03 03:52:06 UTC
Created attachment 105651 [details]
Start center 4.3.1 font size too big

Can you reopen the bug?

4.3.1 had the adverse effect on my system (Fedora LXDE). Now the font sizes on the "Start center" window, and on the "About" window look disproportionate and amateurish.

4.3.0 and previous versions did not had this problem.
Comment 24 nomnex 2014-09-03 03:53:19 UTC
Created attachment 105652 [details]
About window 4.3.1 font too big
Comment 25 Adolfo Jayme Barrientos 2014-09-03 06:52:11 UTC
@nodatalog: I don’t think this is related to what you see at all, you should tweak your system settings to reduce the font size value, which seems to affect all of the screen’s widgets instead of just the Start Center’s sidebar, which was the issue described in this bug report.