Resolves: fdo#80476 Start Center sidebar button are too large

Change-Id: Iedf67b5591d84963e1caf3e8d9d17d42175bb604
(cherry picked from commit 9a5e81fa80d1e90bd73ae4e19c89b28537aed334)